Fixed bug with mobile menu not blurring

--- a/static/style.css
+++ b/static/style.css
@@ -49,9 +49,9 @@ body {
 nav {
     background-color: rgba(0, 0, 0, 0);
     backdrop-filter: blur(6px);
-    height: 2.5rem;
     padding: 0.5rem;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     position: fixed;
@@ -68,6 +68,12 @@ a {
 }
 
 /* REGULAR MENU STYLE */
+.nav-regular-menu-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 0.5rem;
+    width: 100vw;
+}
 .nav-menu-container {
     margin-left: -0.5rem;
     display: flex;
@@ -132,13 +138,9 @@ a {
 /* MOBILE MENU */
 .nav-mobile-menu-container {
     display: none;
-    position: fixed;
-    top: 2.5rem;
-    left: 0;
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(3px);
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .mobile-menu-img-container {
@@ -185,7 +187,6 @@ a {
         display: flex;
         gap: 1rem;
     }
-
 }
 
 /* MAIN */
